istio/lab5-fault-injection/virtualservices-delay.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: caj-master-file
spec:
  hosts:
    - caj-master-file
  http:
  - fault:
      delay:
        fixedDelay: 5s
        percentage:
          value: 100
    route:
    - destination:
        host: caj-master-file
        subset: v1
